# datathon-sunass-2026

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  limpieza.py  ruteo.py
tests/: test_limpieza.py  test_ruteo.py
