[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datathon-sunass-2026"
version = "1.0.0"
description = "Optimizacion operativa de una EPS de saneamiento: limpieza, K-Means y ruteo TSP (Datathon SUNASS 2026, finalista)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alvaro Villanueva Kobayashi" }]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
